# tdector

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  rustfmt.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: release.yml  wasm-deploy.yml
assets/: manifest.json  sw.js
example/: README.md  epigraph.json  epigraph.txt  ginger.json
sample/: README.md  epigraph.json  epigraph.txt  example_with_comments.json  example_with_formation.json  ginger.json  ginger.txt
src/: lib.rs  main.rs  models.rs
src/app/: actions.rs  cache_lookup.rs  cache_tfidf.rs  commands.rs  dialogs.rs  dictionary_popups.rs  file_ops.rs  filtering.rs  lookup_cache.rs  menu_sentence.rs  menu_word.rs  mod.rs  panels.rs  pinned_popups.rs  popup_comments.rs  popup_dictionary.rs  popup_similar.rs  popup_word_formation.rs  popups.rs  similar.rs  state.rs  tfidf_cache.rs  update.rs
src/consts/: colors.rs  domain.rs  mod.rs  ui.rs
src/enums/: app_action.rs  app_error.rs  file_type.rs  formation_type.rs  mod.rs  popups.rs  sort_mode.rs  ui_action.rs  word_ref.rs
src/io/: dialogs.rs  file_io.rs  file_ops.rs  json_formatter.rs  mod.rs  project.rs  typst.rs  wasm_file.rs
src/libs/: cache.rs  filtering.rs  formation.rs  mod.rs  models.rs  similarity.rs  similarity_sentence.rs  similarity_token.rs  sorting.rs  text_analysis.rs  types.rs
src/libs/eval/: engine.rs  formation.rs  mod.rs  tokenization.rs
src/models/: mod.rs  models.rs
src/ui/: colors.rs  constants.rs  dialogs.rs  highlight.rs  menu.rs  mod.rs  pagination.rs  panels.rs  popup_utils.rs  segment.rs  types.rs
(+26 files in other folders)
