[package]
name = "tdector"
version = "0.1.2"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.17.2"
rhai = "1.24"
log = "0.4.27"
rfd = "0.17"
pollster = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.9"
scirs2-text = "0.1.5"
image = "0.25"

# Web support:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "*", features = ["js"] }
web-sys = { version = "0.3.70", features = [
    "HtmlInputElement",
    "File",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "Window",
    "Document",
    "Element",
    "Event",
    "EventTarget",
] }

[profile.release]
opt-level = 3

[profile.release.wasm32-unknown-unknown]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2


[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[workspace.lints.clippy]
disallowed_methods = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
iter_over_hash_type = "warn"
uninlined_format_args = "warn"
